Configure Nexus distributionManagement